--- a/frontend/src/component/User/Profile.css
+++ b/frontend/src/component/User/Profile.css
@@ -379,6 +379,13 @@ margin-bottom: 1vh;
 border: 1px solid rgb(181, 181, 181);
 }
 
+.modal-content>select {
+  border-radius: 10px;
+  padding: 2vh 1vw;
+  margin-bottom: 1vh;
+  border: 1px solid rgb(181, 181, 181);
+}
+
 .SaveBtn2 {
 border-radius: 10px;
 padding: 1.5vh 1vw;
