--- a/frontend/src/component/Product/ProductDetails.css
+++ b/frontend/src/component/Product/ProductDetails.css
@@ -15,10 +15,10 @@ body {
   /* background-color: rgb(255, 0, 0); */
   width: 100vw;
   max-width: 100%;
-  padding: 4vh 2vw;
+  padding: 0vh 2vw;
   box-sizing: border-box;
   display: flex;
-  margin-top: 8vh;
+  /* margin-top: 8vh; */
 }
 
 .ProductDetails > div {
