--- a/frontend/src/component/layout/Header/Header.css
+++ b/frontend/src/component/layout/Header/Header.css
@@ -7,296 +7,6 @@
   font-family: 'Poppins', sans-serif;
 }
 
-/* header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 4;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  justify-content: space-between;
-  text-align: center;
-  height: 8vh;
-  width: 100%;
-  overflow: hidden;
-  background-color: black;
-  color: white;
-} */
-
-/* .logo {
-  position: fixed;
-  left: 0;
-  margin-left: 3vmax;
-}
-
-.searchBtn {
-  position: fixed;
-  right: 0;
-  margin-right: 15vw;
-  opacity: 1;
-  text-align: center;
-}
-
-.searchBtn.hide {
-	opacity: 0;
-	pointer-events: none;
-}
-
-nav {
-  position: fixed;
-  right: 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  justify-items: center;
-  align-items: center;
-  text-align: center;
-  margin-right: 0.5vmax;
-}
-
-.HomeNav {
-  display: flex;
-  flex-direction: column;
-  margin-right: 3.1vmax;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-}
-
-.HomeNav > button {
-  text-decoration: none;
-  color: white;
-  opacity: 0.8;
-  text-align: center;
-  background-color: black;
-  justify-content: center;
-  align-items: center;
-}
-
-.CartNav {
-  display: flex;
-  flex-direction: column;
-  margin-right: 3vmax;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-}
-
-.CartNav > button {
-  text-decoration: none;
-  color: white;
-  opacity: 0.8;
-  text-align: center;
-  background-color: black;
-  justify-content: center;
-  align-items: center;
-}
-
-.ProfileNav {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-}
-
-.ProfileNav > button {
-  text-decoration: none;
-  color: white;
-  opacity: 0.8;
-  text-align: center;
-  background-color: black;
-  justify-content: center;
-  align-items: center;
-}
-
-nav.hide {
-	opacity: 0;
-	pointer-events: none;
-}
-
-nav button:hover {
-  opacity: 1;
-  cursor: pointer;
-}
-
-header .logo {
-  cursor: pointer;
-}
-
-header .nav-btn {
-  cursor: pointer;
-  background: transparent;
-  border: none;
-  outline: none;
-  color: white;
-  visibility: hidden;
-  opacity: 0;
-  font-size: 1.8rem;
-}
-
-header .search_icon {
-  position: relative;
-}
-
-header .search_icon img{
-  overflow: auto;
-  position: relative;
-  height: 5vmax;
-  width: 3vmax;
-  object-fit: cover;
-  cursor: pointer;  
-  right: 70px;
-}
-
-header .orange_nav img {
-  height: 80px; 
-  transform: translateX(-200vh);
-}
-
-header .orange_nav {
-  animation: nav_animation 3s infinite ;
-}
-
-@keyframes nav_animation{
-	0%{
-		transform: translateX(-500vh);
-		opacity: 0.8;
-	}
-	100%{
-		transform: translateX(600vh);
-		opacity: 0.5;
-	}
-}
-
-.search_icon {
-  padding: 0;
-  margin: 0;
-}
- .icon {
-  font-size: 1.5rem;
-  color: white;
-  background-color: black;
-  padding: 0;
-  margin: 0;
-  fill: white;
-  cursor: pointer;
-}
-
-.minicon1 {
-  font-size: large;
-}
-
-.minicon2 {
-  font-size: large;
-}
-
-.minicon3 {
-  font-size: large;
-}
-
-.search-container.hide {
-	opacity: 0;
-	pointer-events: none;
-}
-.search-container {
-	width: 60%;
-	margin: 0 auto;
-	padding: 0 42px;
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	z-index: 200;
-  align-items: center;
-  text-align: center;
-  margin-top: 1.5vh;
-}
-.search-container .search {
-	position: absolute;
-	left: 12px;
-	opacity: 0.5;
-}
-.search-container form {
-	width: 100%;
-	margin: 0 auto;
-}
-.search-container form input {
-	width: 95%;
-	height: 44px;
-	border: 0;
-	outline: none;
-	background: rgb(227, 226, 226);
-	color: white;
-	font-family: "Inter", sans-serif;
-	font-size: 17px;
-  padding: 10px;
-  border-radius: 10px;
-}
-.close-search {
-	display: block;
-	background-position: center;
-	background-size: 20px;
-	background-repeat: no-repeat;
-	font-size: medium;
-  margin-top: 12px;
-  opacity: 0.8;
-}
-.search-container .close-search {
-	position: absolute;
-	top: 0;
-	right: 12px;
-	opacity: 0.5;
-	cursor: pointer;
-	transition: all 400ms;
-}
-.search-container .close:hover {
-	opacity: 0.7;
-}
-
-.search-bar > form > input {
-  color: black;
-}
-
-@media only screen and (max-width: 1024px) {
-  header .nav-btn {
-    visibility: visible;
-    opacity: 1;
-  }
-
-  header nav {
-    position: fixed;
-    top: 0;
-    right: 0;
-    height: 100%;
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: center;
-    gap: 1.5rem;
-    background-color: grey;
-    transition: 1s;
-    transform: translateX(100vh);
-    opacity: 1;
-  }
-
-  header .responsive_nav {
-    transform: none;
-  }
-
-  nav .nav-close-btn {
-    position: absolute;
-    top: 2rem;
-    right: 2rem;
-  }
-
-  nav a{
-    font-size: 1.5rem;
-  }
-} */
 
 
 header {
@@ -306,7 +16,8 @@ header {
 }
 
 header .orange_nav img {
-  height: 80px; 
+  /* height: 80px;  */
+  height: 10vh;
   transform: translateX(-200vh);
 }
 
@@ -344,6 +55,17 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
+}
+
+.leftNav > h3 {
+  font: bolder 1.5vmax Poppins;
+}
+
+.logoIcon {
+  font: bold 2.2vmax Poppins;
+  margin-right: 0.6vw;
+  margin-bottom: 0.5vh;
 }
 
 .rightNav {
